force-app/main/default/objects/Sales_Forecast__c/Sales_Forecast__c.object-meta.xml
<CustomObject>
    <label>销售预测</label>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>Sales Forecast No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>