force-app/main/default/objects/Sales_Forecast__c/fields/Actual_Qty_N_1__c.field-meta.xml
<CustomField>
    <fullName>Actual_Qty_N_1__c</fullName>
    <label>Actual Qty(N+1)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>