force-app/main/default/objects/Sales_Forecast__c/fields/Actual_Revenue_N__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_N__c</fullName>
    <label>Actual Revenue(N)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>