force-app/main/default/objects/Sales_Forecast__c/fields/Deliveried_and_Not_Invoiced_Turnoverbut__c.field-meta.xml
<CustomField>
    <fullName>Deliveried_and_Not_Invoiced_Turnoverbut__c</fullName>
    <formula>DO_released_but_not_invoced_Qty__c *  RNP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deliveried and Not Invoiced Turnoverbut</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>