force-app/main/default/objects/Sales_Forecast__c/fields/DO_released_but_not_invoced_Qty__c.field-meta.xml
<CustomField>
    <fullName>DO_released_but_not_invoced_Qty__c</fullName>
    <label>DO released but not invoced Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>