force-app/main/default/objects/Sales_Forecast__c/fields/Invoiced_Qty__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Qty__c</fullName>
    <label>Invoiced Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>