force-app/main/default/objects/Sales_Forecast__c/fields/Invoiced_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Turnover__c</fullName>
    <formula>Invoiced_Qty__c *  RNP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>