force-app/main/default/objects/Sales_Forecast__c/fields/Month_N_Total_QTY__c.field-meta.xml
<CustomField>
    <fullName>Month_N_Total_QTY__c</fullName>
    <formula>N_Month_QTY_1st_Week__c +  N_Month_QTY_2nd_Week__c +  N_Month_QTY_3rd_Week__c +  N_Month_QTY_4th_Week__c +  N_Month_QTY_5th_Week__c + N_Month_QTY_6th_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month N Total QTY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>