force-app/main/default/objects/Sales_Forecast__c/fields/N_1_Month_QTY_1st_Week__c.field-meta.xml
<CustomField>
    <fullName>N_1_Month_QTY_1st_Week__c</fullName>
    <label>Month N+1 QTY: 1st Week</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>