force-app/main/default/objects/Sales_Forecast__c/fields/N_2_Month_QTY_4th_Week__c.field-meta.xml
<CustomField>
    <fullName>N_2_Month_QTY_4th_Week__c</fullName>
    <label>Month N+2 QTY: 4th Week</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>