force-app/main/default/objects/Sales_Forecast__c/fields/N_Month_QTY_5th_Week__c.field-meta.xml
<CustomField>
    <fullName>N_Month_QTY_5th_Week__c</fullName>
    <label>Month N QTY: 5th Week</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>