force-app/main/default/objects/Sales_Forecast__c/fields/Open_order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Open_order_Qty__c</fullName>
    <label>Open order Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>