force-app/main/default/objects/Sales_Forecast__c/fields/Open_Order_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Open_Order_Turnover__c</fullName>
    <formula>Open_order_Qty__c *  RNP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Order Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>