force-app/main/default/objects/Sales_Forecast__c/fields/Oversea_Company_Sales_Department__c.field-meta.xml
<CustomField>
    <fullName>Oversea_Company_Sales_Department__c</fullName>
    <label>Sales Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hisense USA</fullName>
            </value>
            <value>
                <fullName>USA(OEM)</fullName>
            </value>
            <value>
                <fullName>Hisense Mexico</fullName>
            </value>
            <value>
                <fullName>Hisense Australia</fullName>
            </value>
            <value>
                <fullName>Hisense Malaysia</fullName>
            </value>
            <value>
                <fullName>Hisense South Africa</fullName>
            </value>
            <value>
                <fullName>American Sales Department</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa Sales Department</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific Sales Department</fullName>
            </value>
            <value>
                <fullName>Key Account Sales Department</fullName>
            </value>
            <value>
                <fullName>Europe Sales Department</fullName>
            </value>
            <value>
                <fullName>Communications Sales Department</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
                <isActive>false</isActive>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Malaysia</fullName>
                <isActive>false</isActive>
                <label>Malaysia</label>
            </value>
            <value>
                <fullName>Mexico</fullName>
                <isActive>false</isActive>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>Sales Department(HA)</fullName>
                <isActive>false</isActive>
                <label>Sales Department(HA)</label>
            </value>
            <value>
                <fullName>Sales Department(TV)</fullName>
                <isActive>false</isActive>
                <label>Sales Department(TV)</label>
            </value>
            <value>
                <fullName>South Africa</fullName>
                <isActive>false</isActive>
                <label>South Africa</label>
            </value>
            <value>
                <fullName>USA</fullName>
                <isActive>false</isActive>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>