force-app/main/default/objects/Sales_Forecast__c/fields/Planning_Qty_N_2__c.field-meta.xml
<CustomField>
    <fullName>Planning_Qty_N_2__c</fullName>
    <label>Planning Qty(N+2)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>