force-app/main/default/objects/Sales_Forecast__c/fields/Planning_Revenue_N_1__c.field-meta.xml
<CustomField>
    <fullName>Planning_Revenue_N_1__c</fullName>
    <label>Planning Revenue(N+1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>