force-app/main/default/objects/Sales_Forecast__c/fields/Planning_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Planning_Turnover__c</fullName>
    <formula>Planning_Qty_N__c *  RNP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planning Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>