force-app/main/default/objects/Sales_Forecast__c/fields/POD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>POD_Quantity__c</fullName>
    <label>POD Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>