force-app/main/default/objects/Sales_Forecast__c/fields/Update_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Update_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id Updating Usage</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>