force-app/main/default/objects/Sales_Forecast__c/fields/Virtural_Order__c.field-meta.xml
<CustomField>
    <fullName>Virtural_Order__c</fullName>
    <label>Virtural Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>