force-app/main/default/objects/Sales_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Oversea_Company_Sales_Department__c</columns>
    <columns>Product_Line__c</columns>
    <columns>DO_released_but_not_invoced_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>